// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SegmentedButtonContainer should apply the correct styling, HTMLAttributes, and allow a ref 1`] = `
<div
  class="rmd-segmented-button-container"
  data-testid="container"
>
  Content
</div>
`;

exports[`SegmentedButtonContainer should apply the correct styling, HTMLAttributes, and allow a ref 2`] = `
<div
  class="rmd-segmented-button-container custom-class-name"
  data-testid="container"
  style="color: white;"
>
  Content
</div>
`;

exports[`SegmentedButtonContainer styling utility class should be callable without any arguments 1`] = `"rmd-segmented-button-container"`;
